# milionaria-ai

./: .env.sample  .gitattributes  .gitignore  LICENSE  pyproject.toml  pytest.ini  requirements.txt
apps/: app_streamlit.py  milionaria.py  milionaria_gui.py
configs/: config.yaml  filters.yaml
deployment/: Makefile  MilionariaGUI.bat  MilionariaGUI.ps1  MilionariaStreamlit.bat  MilionariaStreamlit.ps1  MilionariaUpdate.bat  MilionariaUpdate.ps1  env.yml  install.bat  install.ps1  setup.py
docs/: ACOES_CORRETIVAS_CONCLUIDAS.md  ANOMALY_DETECTION.md  README.md  README_EXECUTAVEL_STREAMLIT.md  RUNBOOK.md
scripts/: final_audit.py  fix_data.py  temp_streamlit_app.py  validate_data.py  verify_import.py
src/: __init__.py
src/audit/: db_inspect.py
src/cli/: __init__.py  app.py
src/db/: __init__.py  io.py  schema.py
src/etl/: __init__.py  from_db.py
src/features/: __init__.py  make.py
src/generate/: __init__.py  export.py  tickets.py
src/ingest/: __init__.py  import_initial.py
src/models/: __init__.py  scoring.py  scoring_gpu.py
src/simulate/: __init__.py  backtest_ray.py  walkforward.py
src/update/: __init__.py  caixa_provider.py  external_api_provider.py  fallback_update.py  fetch_caixa.py  provider_base.py  update_db.py
src/utils/: __init__.py  caixa_selectors.py  metrics.py  notify.py  validate.py
tasks/: .gitkeep  get_stats.py  self_check.ps1  update_all.ps1
tests/: test_db.py  test_db_contract.py  test_import.py  test_schema.py  test_update.py  test_update_db.py
